--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@ h2:nth-child(4) {
 
 h2 {
   font-size: 100%;
-  color: #F29B30;
+  color: #F29E03;
   font-family: 'Orbitron', sans-serif;
 }
 
@@ -47,7 +47,7 @@ h2 {
 }
 
 #topnav a:hover{
-  color: #F29B30;
+  color: #F29E03;
 }
 
 #topnav ul li a{
@@ -75,7 +75,7 @@ h2 {
 
 
 h3 {
-  color: #53A68E;
+  color: #0CFFE1;
   font-size: 200%;
   text-align: center;
   font-family: 'Orbitron', sans-serif;
@@ -97,7 +97,7 @@ button {
 }
 
 button:hover {
-  color: #F29B30;
+  color: #F29E03;
   font-weight: bold;
   cursor: pointer;
 }
@@ -111,7 +111,7 @@ label {
   padding-bottom: 2em;
   font-size: 120%;
   text-align: center;
-  color: #53A68E;
+  color: #0CFFE1;
 }
 
 li a{
